[gd_scene load_steps=5 format=2]

[ext_resource path="res://Screens/ChooseShip.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/Early GameBoy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Font/gameboy.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="ChooseShip" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = -200.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 624.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 1 )
text = "Choose a ship"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 624.0
margin_bottom = 333.0
custom_constants/separation = 20
alignment = 1

[node name="Scout" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 282.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "Scout"

[node name="Freight" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 454.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "Freight"

[node name="Description" type="Label" parent="VBoxContainer"]
margin_top = 353.0
margin_right = 624.0
margin_bottom = 367.0
align = 1
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Scout" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Scout" to="." method="_on_Scout_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Scout" to="." method="_on_Scout_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Freight" to="." method="_on_Freight_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Freight" to="." method="_on_Freight_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Freight" to="." method="_on_Freight_pressed"]
